# cc_toolchains

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  repositories.bzl  toolchains.bzl
config/: defs.bzl
constraints/: BUILD.bazel  constraints.bzl  triple.bzl  workspace.bzl
constraints/cpu/: BUILD.bazel
constraints/os/: BUILD.bazel
constraints/os/linux/: BUILD.bazel
docs/: BUILD.bazel  llvm.md
gcc/: toolchains.bzl
llvm/: BUILD.bazel  repositories.bzl  toolchains.bzl
llvm/clang_format/: BUILD.bazel  clang_format.bzl
llvm/clang_format/private/: BUILD.bazel  clang_format_process_wrapper.cc  clang_format_runner.cc  clang_format_utils.cc  clang_format_utils.h
llvm/private/: BUILD.bazel  llvm_versions.bzl  repository_utils.bzl  update_llvm_versions.py
llvm/private/update/: BUILD.bazel  update_llvm_versions.py
llvm/private/update/tests/: update_llvm_tools_test.py
llvm/private/update/update_llvm/: debian.py  macos.py  redhat.py  types.py  windows.py
msvc/: toolchains.bzl
tests/rules_lang/: cross.bzl
tests/rules_lang/cc/: BUILD.bazel  fibonacci.cc  fibonacci.h  fibonacci_main.cc  fibonacci_test.cc
tests/rules_lang/rust/: BUILD.bazel  fibonacci.rs  fibonacci_main.rs  fibonacci_test.rs
tools/generate_host_bazelrc/: BUILD.bazel  generate_host_bazelrc.bat  generate_host_bazelrc.sh
tools/repo/: debian.bzl
