load("//constraints:constraints.bzl", "triple_to_constraint_set")
load("//platforms:platforms.bzl", "SUPPORTED_TRIPLES")

[
    config_setting(
        name = triple,
        constraint_values = triple_to_constraint_set(triple),
        visibility = ["//visibility:public"],
    )
    for triple in SUPPORTED_TRIPLES
]
