load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")

stardoc(
    name = "llvm",
    out = "llvm.gen.md",
    input = "//llvm:repositories.bzl",
    deps = ["//:bzl_lib"],
)

diff_test(
    name = "llvm_test",
    failure_message = "To fix, run 'cp -f ./bazel-bin/docs/llvm.gen.md ./docs/llvm.md' from the root of the repo.",
    file1 = ":llvm",
    file2 = "llvm.md",
)
