package(
    default_visibility = ["//visibility:public"],
)

alias(
    name = "freebsd",
    actual = "@platforms//os:freebsd",
)

alias(
    name = "netbsd",
    actual = "@platforms//os:netbsd",
)

alias(
    name = "openbsd",
    actual = "@platforms//os:openbsd",
)

alias(
    name = "android",
    actual = "@platforms//os:android",
)

alias(
    name = "linux",
    actual = "@platforms//os:linux",
)

alias(
    name = "windows",
    actual = "@platforms//os:windows",
)

# For platforms with no OS, like microcontrollers.
alias(
    name = "none",
    actual = "@platforms//os:none",
)

### Apple OS Values

alias(
    name = "ios",
    actual = "@platforms//os:ios",
)

# TODO(b/138656886): Rename this to macos instead of osx.
alias(
    name = "osx",
    actual = "@platforms//os:osx",
)

alias(
    name = "macos",
    actual = ":osx",
)

alias(
    name = "tvos",
    actual = "@platforms//os:tvos",
)

alias(
    name = "watchos",
    actual = "@platforms//os:watchos",
)

alias(
    name = "qnx",
    actual = "@platforms//os:qnx",
)

# NixOS uses the Linux kernel, but is not ABI-compatible with any
# other Linux distribution. This is because the dynamic linker is in
# a non-standard (and undefined) location on the filesystem.
alias(
    name = "nixos",
    actual = "@platforms//os:nixos",
)

# WASI (WebAssembly System Interface)
# https://github.com/bytecodealliance/wasmtime/blob/main/docs/WASI-overview.md
alias(
    name = "wasi",
    actual = "@platforms//os:wasi",
)

alias(
    name = "fuchsia",
    actual = "@platforms//os:fuchsia",
)

################################################################################
constraint_setting(name = "linux_flavor")

constraint_value(
    name = "ubuntu",
    constraint_setting = ":linux_flavor",
)

constraint_value(
    name = "rhel",
    constraint_setting = ":linux_flavor",
)

alias(
    name = "redhat",
    actual = ":rhel",
)

alias(
    name = "centos",
    actual = ":rhel",
)

alias(
    name = "fedora",
    actual = ":rhel",
)

# https://en.wikipedia.org/wiki/SUSE_Linux_Enterprise
constraint_value(
    name = "sle",
    constraint_setting = ":linux_flavor",
)

alias(
    name = "sles",
    actual = ":sle",
)

alias(
    name = "sled",
    actual = ":sle",
)

################################################################################
constraint_setting(name = "ubuntu_version")

[
    constraint_value(
        name = "ubuntu-{}".format(version),
        constraint_setting = ":ubuntu_version",
    )
    for version in [
        14,
        16,
        18,
        20,
    ]
]

################################################################################
constraint_setting(name = "centos_version")

[
    constraint_value(
        name = "centos-{}".format(version),
        constraint_setting = ":centos_version",
    )
    for version in [
        8,
        9,
    ]
]

################################################################################
constraint_setting(name = "fedora_version")

[
    constraint_value(
        name = "fedora-{}".format(version),
        constraint_setting = ":fedora_version",
    )
    for version in [
        35,
        36,
    ]
]

################################################################################
constraint_setting(name = "rhel_version")

[
    constraint_value(
        name = "redhat-{}".format(version),
        constraint_setting = ":rhel_version",
    )
    for version in [
        7,
    ]
]

################################################################################
constraint_setting(name = "freebsd_version")

[
    constraint_value(
        name = "freebsd-{}".format(version),
        constraint_setting = ":freebsd_version",
    )
    for version in [
        11,
        12,
        13,
    ]
]

################################################################################
constraint_setting(name = "sle_version")

[
    constraint_value(
        name = "sle-{}".format(version),
        constraint_setting = ":sle_version",
    )
    for version in [
        "12.4",
    ]
]
