package(
    default_visibility = ["//visibility:public"],
)

constraint_setting(name = "linux_flavor")

constraint_value(
    name = "ubuntu",
    constraint_setting = ":linux_flavor",
)

constraint_value(
    name = "ubuntu_16",
    constraint_setting = ":linux_flavor",
)

constraint_value(
    name = "ubuntu_18",
    constraint_setting = ":linux_flavor",
)

constraint_value(
    name = "ubuntu_20",
    constraint_setting = ":linux_flavor",
)

constraint_value(
    name = "redhat",
    constraint_setting = ":linux_flavor",
)

alias(
    name = "rhel",
    actual = "redhat",
)

alias(
    name = "centos",
    actual = "redhat",
)

constraint_value(
    name = "centos_8",
    constraint_setting = ":linux_flavor",
)

constraint_value(
    name = "centos_9",
    constraint_setting = ":linux_flavor",
)
